[tool.poetry]
name = "eco-explore-api"
version = "0.1.0"
description = "Exo Explore Backend for Traveling App"
authors = ["josephyv <haguilar@auronix.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "eco_explore_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
requests = "^2.31.0"
firebase-admin = "^6.2.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
