[tool.poetry]
name = "eco_explore_api"
version = "0.1.0"
description = "Exo Explore Backend for Traveling App"
authors = ["josephyv <josephynimoto@gmail.com>"]
readme = "../README.md"
packages = [{include = "eco_explore_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
requests = "^2.31.0"
firebase-admin = "^6.2.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
poetry = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
