[tool.poetry]
name = "eco_explore_api"
version = "0.1.0"
description = "Exo Explore Backend for Traveling App"
authors = ["josephyv <josephynimoto@gmail.com>"]
readme = "../README.md"
packages = [{include = "eco_explore_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
requests = "^2.31.0"
firebase-admin = "^6.2.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
poetry = "^1.6.1"
pydantic = "^2.4.2"
json5 = "^0.9.14"
pymongo = "^4.6.0"
python-dotenv = "^1.0.0"
authlib = "^1.2.1"
phonenumbers = "^8.13.26"
pydantic-extra-types = "^2.1.0"
email-validator = "^2.1.0.post1"
pydantic-mongo = "^2.0.3"
google-cloud-storage = "^2.14.0"
python-multipart = "^0.0.6"
fast-api-gcs = "^0.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
